# vision

./: CMakeLists.txt  CMakeLists.txt.user.QQ4656
libraries/: CMakeLists.txt
libraries/RosImageTransport/: CMakeLists.txt  RosImageTransport.cpp  RosImageTransport.hpp
libraries/RosMessages/: CMakeLists.txt  sensor_msgs_CompressedImage.h
libraries/RosMessages/sensor_msgs/: CompressedImage.msg
programs/: CMakeLists.txt
programs/colorRegionDetection/: CMakeLists.txt  ColorRegionDetection.cpp  ColorRegionDetection.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/colorRegionDetection/msg/: sensor_msgs_Image.h
programs/haarDetection/: CMakeLists.txt  HaarDetection.cpp  HaarDetection.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/visionBalance/: CMakeLists.txt  SegmentorThread.cpp  SegmentorThread.hpp  VisionBalance.cpp  VisionBalance.hpp  data_capture.cpp  main.cpp
programs/visionControl/: CMakeLists.txt  global.h  main.cpp  ratethread.h
share/: CMakeLists.txt
share/visionBalance/: CMakeLists.txt
share/visionBalance/conf/: visionBalance.ini
